--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -29,8 +30,10 @@
     "eslint-config-next": "13.3.4",
     "lucide-react": "^0.192.0",
     "next": "13.3.4",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-charts": "2.0.0-beta.7",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.12.0",
