--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-hover-card": "^1.0.5",
     "@radix-ui/react-label": "^2.0.1",
@@ -33,9 +34,9 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
-    "react-charts": "2.0.0-beta.7",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "recharts": "^2.5.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
