--- a/package.json
+++ b/package.json
@@ -20,23 +20,25 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.3",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@types/node": "20.1.0",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
-    "lucide-react": "^0.192.0",
-    "next": "13.3.4",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "lucide-react": "^0.211.0",
+    "next": "13.4.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "recharts": "^2.5.0",
+    "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
