--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "turbo": "next dev --turbo",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,7 +21,7 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.3",
-    "@types/node": "20.1.0",
+    "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -29,15 +30,15 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "lucide-react": "^0.211.0",
-    "next": "13.4.1",
+    "eslint-config-next": "13.4.2",
+    "lucide-react": "^0.216.0",
+    "next": "13.4.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
-    "recharts": "^2.5.0",
+    "recharts": "^2.6.2",
     "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
